--- a/toby-springboot/src/main/resources/application.properties
+++ b/toby-springboot/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=toby-springboot
 server.contextPath=/app
 server.port=8080
+data.driver-class-name=org.h2.Driver
+data.url=jdbc:h2:mem:
+data.username=sa
+data.password=
