1. test 코드 commit

--- a/jpa-test/src/test/resources/application-test.yml
+++ b/jpa-test/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     name: jpa-test
 
   datasource:
-    url: jdbc:postgresql://localhost:54315/newbplocaldb??options=-c%20search_path=newbp_local,public
+    url: jdbc:postgresql://localhost:54315/newbplocaldb
     username: newbp_local
     password: 1q2w3e4r!
     #    url: jdbc:postgresql://221.168.39.232:54315/newbpdevdb
