--- a/hibernate-multitenant/src/main/resources/application.yml
+++ b/hibernate-multitenant/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
     #    password: newbp_app123
     driver-class-name: org.postgresql.Driver
 
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: true
+
   jpa:
 #    open-in-view: false
 
